--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "jt-product-card",
+  "name": "jtu-product-card",
   "author": "jose.antonio.umeres@gmail.com",
-  "module": "dist/jt-product-card.esm.js",
+  "module": "dist/jtu-product-card.esm.js",
   "size-limit": [
     {
-      "path": "dist/jt-product-card.cjs.production.min.js",
+      "path": "dist/jtu-product-card.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/jt-product-card.esm.js",
+      "path": "dist/jtu-product-card.esm.js",
       "limit": "10 KB"
     }
   ],
